--- a/instrumentory/frontend/src/teacherPages/Dashboard.css
+++ b/instrumentory/frontend/src/teacherPages/Dashboard.css
@@ -69,6 +69,7 @@ h1 {
     width: 15em;
     margin: 1em auto;
     border: 1px solid black;
+    /* background-color: var(--success-light); */
 }
 
 .graph:focus,
